--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact me</a>
+              <a class="nav-link" href="/contact.html">Contact us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/photo.html">See pictures></picture></a>
