--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact me</a>
+              <a class="nav-link" href="/contact.html">Contact us
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/photo.html">See pictures></picture></a>
@@ -53,6 +54,7 @@
     </nav>
     <br />
     <br />
+    
     <h1 class="header">Important infos about Croissants</h1>
     <h2 class="sub-header">Read everything you need to know about Croissants</h2>
 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
