--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="/contact.html">Contact us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/photo.html">See pictures></picture></a>
+              <a class="nav-link" href="/photo.html">See pictures</picture></a>
             </li>
           </ul>
         </div>
@@ -54,9 +54,9 @@
     <br />
     <br />
     
-    <h1 class="header">Contact us!</h1>
-    <h2 class="sub-header">Contact us to leran more about Croissants! </h2>
- <a href="mailto:croissant-info.@gmail.com" class="email-link"
-        >croissant-info@gmail.com</a
+    <h1 class="main-header text-center">Contact us!</h1>
+    <h2 class="sub-header text-center">📯 Contact us to leran more about Croissants! </h2>
+ <div class="contact"><a href="mailto:croissant-info.@gmail.com" class="email-link"
+        >croissant-info@gmail.com</a </div>
 </body>
 </html>
