--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/photo.html">See pictures></picture></a>
+              <a class="nav-link" href="/photo.html">See pictures</picture></a>
             </li>
           </ul>
         </div>
@@ -55,11 +55,20 @@
     <br />
     <br />
     
-    <h1 class="header">Important infos about Croissants</h1>
-    <h2 class="sub-header">Read everything you need to know about Croissants</h2>
+    <h1 class="main-header text-center ">Important infos about Croissants</h1>
+    
+    <h2 class="sub-header text-center">Read everything you need to know about Croissants</h2>
+<br />
+<div class="text-layout">
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.</p> 
+              <br />
 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.</p> 
+              </div>
 </body>
 </html>
