--- a/photo.html
+++ b/photo.html
@@ -45,17 +45,20 @@
               <a class="nav-link" href="/contact.html">Contact us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/photo.html">See pictures></picture></a>
+              <a class="nav-link" href="/photo.html">See pictures</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <img src="" class="img-fluid rounded" />
+    <h1 class="main-header text-center">👀Look👀: This is a Croissant!</h1>
+    <div class="img-croissant text-center">
+      <img
+        src="https://vandemoortele.com/sites/default/files/styles/square_product/public/27a361985453560dc85d39cabc974f7d274cc379.jpg?itok=tz6KjGfs"
+        alt="picture of a croissant"
+        class="img-fluid rounded"
+      />
     </div>
-  </div>
-</div>
+  </body>
+</html>
