--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,13 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
     <link href="/style/about_homepage.css" rel="stylesheet" />
+    <title>How to contact us</title>
+     <meta
+      name="description"
+      content="How to contact us for more information about Croissants"
+    />
+    
   </head>
 
   <body>
