--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
     <link href="/style/about_homepage.css" rel="stylesheet" />
+    <title>All to know about Croissants - Croissant</title>
+    <meta
+      name="description"
+      content="Croissants informs you about anything you need do know about Croissants"
+    />
   </head>
 
   <body>
@@ -42,11 +46,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact us
-              </a>
+              <a class="nav-link" href="/contact.html">Contact us </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/photo.html">See pictures</picture></a>
+              <a class="nav-link" href="/photo.html">See pictures</a>
             </li>
           </ul>
         </div>
@@ -54,21 +57,27 @@
     </nav>
     <br />
     <br />
-    
-    <h1 class="main-header text-center ">Important infos about Croissants</h1>
-    
-    <h2 class="sub-header text-center">Read everything you need to know about Croissants</h2>
-<br />
-<div class="text-layout">
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.</p> 
-              <br />
-<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.</p> 
-              </div>
-</body>
+
+    <h1 class="main-header text-center">Important infos about Croissants</h1>
+
+    <h2 class="sub-header text-center">
+      Read everything you need to know about Croissants
+    </h2>
+    <br />
+    <div class="text-layout">
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos
+        eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
+        dolore.
+      </p>
+      <br />
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos
+        eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
+        dolore.
+      </p>
+    </div>
+  </body>
 </html>
