--- a/photo.html
+++ b/photo.html
@@ -15,8 +15,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
     <link href="/style/about_homepage.css" rel="stylesheet" />
+    <title>Document</title>
+    <meta name="description" content="Important picture of a Croissant" />
   </head>
 
   <body>
